Dmc2610Demo/VC.NET/dmc2610_demo/DMC2610.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//---------------------   板卡初始和配置函数  ----------------------
/********************************************************************************
** 函数名称: d2610_board_init
** 功能描述: 控制板初始化，设置初始化和速度等设置
** 输　  入: 无
** 返 回 值: 0：无卡； 1-8：成功(实际卡数) 
*********************************************************************************/
DMC2610_API WORD __stdcall d2610_board_init(void);
/********************************************************************************
** 函数名称: d2610_board_close
** 功能描述: 关闭所有卡
** 输　  入: 无
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_board_close(void);
 

/********************************************************************************
** 函数名称: 控制卡复位
** 功能描述: 复位所有卡，只能在初始化完成之后调用．
** 输　  入: 无
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_board_reset(void);
//脉冲输入输出配置
/********************************************************************************
** 函数名称: d2610_set_pulse_outmode
** 功能描述: 脉冲输出方式的设置
** 输　  入: axis - (0 - 3), outmode: 0 - 7
**           6:正交脉冲，A相超前; 7:正交脉冲，B相超前
** 返 回 值: 无 
*********************************************************************************/
DMC2610_API void __stdcall d2610_set_pulse_outmode(WORD axis,WORD outmode);
//专用信号设置函数
DMC2610_API void __stdcall d2610_config_SD_PIN(WORD axis,WORD enable, WORD sd_logic,WORD sd_mode);
DMC2610_API void __stdcall d2610_config_PCS_PIN(WORD axis,WORD enable,WORD pcs_logic);
DMC2610_API void __stdcall d2610_config_INP_PIN(WORD axis,WORD enable,WORD inp_logic);
DMC2610_API void __stdcall d2610_config_ERC_PIN(WORD axis,WORD enable,WORD erc_logic,
				WORD erc_width,WORD erc_off_time);
DMC2610_API void __stdcall d2610_config_ALM_PIN(WORD axis,WORD alm_logic,WORD alm_action);
//new
DMC2610_API void __stdcall d2610_config_EL_MODE(WORD axis,WORD el_mode);
DMC2610_API void __stdcall d2610_set_HOME_pin_logic(WORD axis,WORD org_logic,WORD filter);
DMC2610_API void __stdcall d2610_write_SEVON_PIN(WORD axis, WORD on_off);
DMC2610_API int __stdcall d2610_read_SEVON_PIN(WORD axis);
DMC2610_API void __stdcall d2610_write_ERC_PIN(WORD axis, WORD sel);
DMC2610_API int __stdcall d2610_read_RDY_PIN(WORD axis);
//通用输入/输出控制函数
DMC2610_API int __stdcall d2610_read_inbit(WORD cardno, WORD bitno);
DMC2610_API void __stdcall d2610_write_outbit(WORD cardno, WORD bitno,WORD on_off);
DMC2610_API int __stdcall  d2610_read_outbit(WORD cardno, WORD bitno) ;
DMC2610_API long __stdcall d2610_read_inport(WORD cardno);
DMC2610_API long __stdcall d2610_read_outport(WORD cardno) ;
DMC2610_API void __stdcall d2610_write_outport(WORD cardno, DWORD port_value);
//制动函数
DMC2610_API void __stdcall d2610_decel_stop(WORD axis,double Tdec);
DMC2610_API void __stdcall d2610_imd_stop(WORD axis);
DMC2610_API void __stdcall d2610_emg_stop(void) ;
DMC2610_API void __stdcall d2610_simultaneous_stop(WORD axis) ;
//位置设置和读取函数
DMC2610_API long __stdcall d2610_get_position(WORD axis);
DMC2610_API void __stdcall d2610_set_position(WORD axis,long current_position);
//状态检测函数
DMC2610_API WORD __stdcall  d2610_check_done(WORD axis) ;
DMC2610_API WORD __stdcall d2610_prebuff_status(WORD axis);
DMC2610_API WORD __stdcall d2610_axis_io_status(WORD axis);
DMC2610_API WORD __stdcall d2610_axis_status(WORD axis);
DMC2610_API DWORD __stdcall d2610_get_rsts(WORD axis) ;
//速度设置
DMC2610_API void __stdcall d2610_variety_speed_range(WORD axis,WORD chg_enable ,double Max_Vel);
DMC2610_API double __stdcall d2610_read_current_speed(WORD axis);
DMC2610_API void __stdcall d2610_change_speed(WORD axis,double Curr_Vel);
DMC2610_API void __stdcall d2610_set_vector_profile(double Min_Vel,double Max_Vel,double Tacc,double Tdec);
DMC2610_API void __stdcall d2610_set_profile(WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec);
DMC2610_API void __stdcall d2610_set_s_profile(WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec, long Sacc,long Sdec);
DMC2610_API void __stdcall d2610_set_st_profile(WORD axis,double Min_Vel, double Max_Vel,double Tacc,double Tdec, double Tsacc,double Tsdec);
DMC2610_API void __stdcall d2610_reset_target_position(WORD axis,long dist);
//设置PCS位置的距离值
DMC2610_API void __stdcall d2610_reset_target_position2(WORD axis,long dist);
//单轴定长运动
DMC2610_API void __stdcall d2610_t_pmove(WORD axis,long Dist,WORD posi_mode);
DMC2610_API void __stdcall d2610_ex_t_pmove(WORD axis,long Dist,WORD posi_mode);
DMC2610_API void __stdcall d2610_s_pmove(WORD axis,long Dist,WORD posi_mode);