DrilTapeTest1/DrilTapeTest1/DMC2610.cs

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;


namespace DrilTapeTest1


{
    public class Dmc2610
    {
        //---------------------   板卡初始和配置函数  ----------------------
        /********************************************************************************
        ** 函数名称: d2610_board_init
        ** 功能描述: 控制板初始化，设置初始化和速度等设置
        ** 输　  入: 无
        ** 返 回 值: 0：无卡； 1-8：成功(实际卡数) 
        *********************************************************************************/
        [DllImport("DMC2610.dll", EntryPoint = "d2610_board_init", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt16 d2610_board_init();

        /********************************************************************************
        ** 函数名称: d2610_board_close
        ** 功能描述: 关闭所有卡
        ** 输　  入: 无
        ** 返 回 值: 无
        *********************************************************************************/
        [DllImport("DMC2610.dll", EntryPoint = "d2610_board_close", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_board_close();

        /********************************************************************************
        ** 函数名称: 控制卡复位
        ** 功能描述: 复位所有卡，只能在初始化完成之后调用．
        ** 输　  入: 无
        ** 返 回 值: 无
        *********************************************************************************/
        [DllImport("DMC2610.dll", EntryPoint = "d2610_board_reset", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_board_reset();


        //脉冲输入输出配置
        /********************************************************************************
        ** 函数名称: d2610_set_pulse_outmode
        ** 功能描述: 脉冲输出方式的设置
        ** 输　  入: axis - (0 - 3), outmode: 0 - 7
        **           6:正交脉冲，A相超前; 7:正交脉冲，B相超前
        ** 返 回 值: 无 
        *********************************************************************************/
        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_pulse_outmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_pulse_outmode(UInt16 axis, UInt16 outmode);

        //专用信号设置函数
        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_SD_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_SD_PIN(UInt16 axis, UInt16 enable, UInt16 sd_logic, UInt16 sd_mode);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_PCS_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_PCS_PIN(UInt16 axis, UInt16 enable, UInt16 pcs_logic);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_INP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_INP_PIN(UInt16 axis, UInt16 enable, UInt16 inp_logic);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_ERC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_ERC_PIN(UInt16 axis, UInt16 enable, UInt16 erc_logic,
                        UInt16 erc_width, UInt16 erc_off_time);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_ALM_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_ALM_PIN(UInt16 axis, UInt16 alm_logic, UInt16 alm_action);
        //new
        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_EL_MODE", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_EL_MODE(UInt16 axis, UInt16 el_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_HOME_pin_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_HOME_pin_logic(UInt16 axis, UInt16 org_logic, UInt16 filter);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_write_SEVON_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_write_SEVON_PIN(UInt16 axis, UInt16 on_off);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_SEVON_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern int d2610_read_SEVON_PIN(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_write_ERC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_write_ERC_PIN(UInt16 axis, UInt16 sel);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_RDY_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern int d2610_read_RDY_PIN(UInt16 axis);

        //通用输入/输出控制函数
        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_inbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern int d2610_read_inbit(UInt16 cardno, UInt16 bitno);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_write_outbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_write_outbit(UInt16 cardno, UInt16 bitno, UInt16 on_off);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_outbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern int d2610_read_outbit(UInt16 cardno, UInt16 bitno);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_inport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_read_inport(UInt16 cardno);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_outport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_read_outport(UInt16 cardno);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_write_outport", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_write_outport(UInt16 cardno, UInt32 port_value);

        //制动函数
        [DllImport("DMC2610.dll", EntryPoint = "d2610_decel_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_decel_stop(UInt16 axis, double Tdec);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_imd_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_imd_stop(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_emg_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_emg_stop();

        [DllImport("DMC2610.dll", EntryPoint = "d2610_simultaneous_stop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_simultaneous_stop(UInt16 axis);

        //位置设置和读取函数
        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_position(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_position(UInt16 axis, Int32 current_position);


        //状态检测函数
        [DllImport("DMC2610.dll", EntryPoint = "d2610_check_done", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt16 d2610_check_done(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_prebuff_status", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt16 d2610_prebuff_status(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_axis_io_status", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt16 d2610_axis_io_status(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_axis_status", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt16 d2610_axis_status(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_rsts", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32 d2610_get_rsts(UInt16 axis);


        //速度设置
        [DllImport("DMC2610.dll", EntryPoint = "d2610_variety_speed_range", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_variety_speed_range(UInt16 axis, UInt16 chg_enable, double Max_Vel);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_current_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern double d2610_read_current_speed(UInt16 axis);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_change_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_change_speed(UInt16 axis, double Curr_Vel);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_vector_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_vector_profile(double Min_Vel, double Max_Vel, double Tacc, double Tdec);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_profile(UInt16 axis, double Min_Vel, double Max_Vel, double Tacc, double Tdec);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_s_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_s_profile(UInt16 axis, double Min_Vel, double Max_Vel, double Tacc, double Tdec, Int32 Sacc, Int32 Sdec);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_st_profile", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_set_st_profile(UInt16 axis, double Min_Vel, double Max_Vel, double Tacc, double Tdec, double Tsacc, double Tsdec);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_reset_target_position", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_reset_target_position(UInt16 axis, Int32 dist);

        //设置PCS位置的距离值

        [DllImport("DMC2610.dll", EntryPoint = "d2610_reset_target_position2", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_reset_target_position2(UInt16 axis, Int32 dist);


        //单轴定长运动

        [DllImport("DMC2610.dll", EntryPoint = "d2610_t_pmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_t_pmove(UInt16 axis, Int32 Dist, UInt16 posi_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_ex_t_pmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_ex_t_pmove(UInt16 axis, Int32 Dist, UInt16 posi_mode);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_s_pmove", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_s_pmove(UInt16 axis, Int32 Dist, UInt16 posi_mode);
